@@ -25,7 +25,7 @@ import tarfile
 
 from bzrlib.transport import get_transport
 
-from bzrlib.plugins.builddeb.tests import BuilddebTestCase
+from bzrlib.plugins.builddeb.tests import BuilddebTestCase, Version
 from bzrlib.plugins.builddeb.tests.test_import_dsc import PristineTarFeature
 
 
@@ -41,8 +41,6 @@ class TestBaseImportDsc(BuilddebTestCase):
       return package_name + '_' + upstream_version + '.orig.tar.gz'
     upstream_tarball_name = property(lambda self:
         self._upstream_tarball_name(self.package_name, self.upstream_version))
-    dsc_name = property(lambda self:
-        self.package_name + '_' + str(self.package_version) + '.dsc')
 
     def make_unpacked_upstream_source(self, transport=None):
         if transport is None:
@@ -50,28 +48,23 @@ class TestBaseImportDsc(BuilddebTestCase):
         transport.ensure_base()
         self.build_tree(['README'], transport=transport)
 
-    def get_test_upstream_version(self, upstream_version):
-        """Return the upstream_version to be used in a test helper method."""
-        if upstream_version is None:
-            return self.upstream_version
-        else:
-            return upstream_version
-
     def make_upstream_tarball(self, upstream_version=None):
-        upstream_version = self.get_test_upstream_version(upstream_version)
+        if upstream_version is None:
+            upstream_version = self.upstream_version
         upstream_dir = self._upstream_dir(self.package_name, upstream_version)
         self.make_unpacked_upstream_source(get_transport(upstream_dir))
         tar = tarfile.open(
             self._upstream_tarball_name(self.package_name, upstream_version),
             'w:gz')
         try:
-            tar.add(self.upstream_dir)
+            tar.add(upstream_dir)
         finally:
             tar.close()
+        return upstream_dir
 
-    def make_debian_dir(self, debian_dir):
+    def make_debian_dir(self, debian_dir, version=None):
         os.mkdir(debian_dir)
-        cl = self.make_changelog()
+        cl = self.make_changelog(version=version)
         self.write_changelog(cl, os.path.join(debian_dir, 'changelog'))
         f = open(os.path.join(debian_dir, 'control'), 'wb')
         try:
@@ -84,24 +77,49 @@ class TestBaseImportDsc(BuilddebTestCase):
         finally:
             f.close()
 
-    def make_real_source_package(self):
-        self.make_upstream_tarball()
-        debian_dir = os.path.join(self.upstream_dir, 'debian')
-        self.make_debian_dir(debian_dir)
-        proc = subprocess.Popen('dpkg-source -b %s' % self.upstream_dir,
+    def make_real_source_package(self, version=None):
+        if version is None:
+            version = self.package_version
+        version = Version(version)
+        upstream_version = version.upstream_version
+        upstream_dir = self.make_upstream_tarball(upstream_version)
+        debian_dir = os.path.join(upstream_dir, 'debian')
+        self.make_debian_dir(debian_dir, version=version)
+        proc = subprocess.Popen('dpkg-source -b %s' % upstream_dir,
                             shell=True, stdout=subprocess.PIPE)
         proc.wait()
         self.assertEqual(proc.returncode, 0)
-        shutil.rmtree(self.upstream_dir)
+        shutil.rmtree(upstream_dir)
+        dsc_name = "%s_%s.dsc" % (self.package_name, version)
+        return dsc_name
 
 
 class TestImportDsc(TestBaseImportDsc):
 
+    def test_import_dsc_incremental(self):
+        self.requireFeature(PristineTarFeature)
+        tree = self.make_branch_and_tree('.')
+        dsc_name = self.make_real_source_package(version="0.1-1")
+        self.run_bzr('import-dsc %s' % dsc_name)
+        dsc_name = self.make_real_source_package(version="0.2-1")
+        self.run_bzr('import-dsc %s' % dsc_name)
+        tree.lock_read()
+        expected_shape = ['README', 'debian/', 'debian/changelog',
+            'debian/control']
+        try:
+            if getattr(self, "check_tree_shape", None):
+                self.check_tree_shape(tree, expected_shape)
+            else:
+                self.check_inventory_shape(tree.inventory, expected_shape)
+        finally:
+            tree.unlock()
+        self.assertEqual(len(tree.branch.revision_history()), 3)
+
     def test_import_dsc(self):
         self.requireFeature(PristineTarFeature)
-        self.make_real_source_package()
+        dsc_name = self.make_real_source_package()
         tree = self.make_branch_and_tree('.')
-        self.run_bzr('import-dsc %s' % self.dsc_name)
+        self.run_bzr('import-dsc %s' % dsc_name)
         tree.lock_read()
         expected_shape = ['README', 'debian/', 'debian/changelog',
             'debian/control']
