@@ -1,8 +1,10 @@
 bzr-builddeb (2.7.6) UNRELEASED; urgency=low
 
   * Bump standards version to 3.9.2 (no changes).
+  * Fix AttributeError in incremental imports using 'bzr import-dsc'.
+    LP: #812950
 
- -- Jelmer Vernooij <jelmer@debian.org>  Tue, 19 Jul 2011 14:24:29 +0200
+ -- Jelmer Vernooij <jelmer@debian.org>  Tue, 19 Jul 2011 17:05:38 +0200
 
 bzr-builddeb (2.7.5) unstable; urgency=low
 
